:lipstick: trying to fix computeur gap in end of main

--- a/src/components/Main/styles.scss
+++ b/src/components/Main/styles.scss
@@ -200,8 +200,8 @@
     flex-direction: column;
     justify-content: space-between;
     &-pink-rectangle{
-      height: 10.45%;
-      background-color: #ffeee8;
+      height: 10.3%;
+      background-color: vars.$color-background-main-swello;
       margin-bottom: 2px;
     }
   }
